--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@ nav ul li a:hover {
     line-height: 1.6;
 }
 
-/* Poravnanje kartica u sredinu stranice */
+
 .car-article-container {
     display: flex;
     flex-wrap: wrap;
@@ -318,7 +318,7 @@ nav ul li a:hover {
     color: #333;
 }
 
-/* Stilizacija za filter i pretragu */
+
 .list-models-div {
     margin-bottom: 20px;
 }
@@ -335,15 +335,15 @@ select, input[type="text"] {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 1em;
-    color: #000; /* Dodano da se osigura crna boja teksta */
+    color: #000; 
     background-color: #fff;
 }
 
-/* Stilizacija za tablicu */
+
 #modelsTable {
     width: 100%;
-    max-width: 100%; /* Osigurava da tablica ne izlazi izvan svog container-a */
-    min-width: 900px; /* Osigurava minimalnu širinu tablice, bez obzira na broj redova */
+    max-width: 100%; 
+    min-width: 900px; 
     border-collapse: collapse;
     margin: 0 auto;
     color: #000;
@@ -351,14 +351,14 @@ select, input[type="text"] {
 }
 
 #modelsTable th, #modelsTable td {
-    border: 1px solid #000; /* Crne linije za razdvajanje svih ćelija */
+    border: 1px solid #000; 
     padding: 10px;
     text-align: center;
-    min-width: 150px; /* Osigurava da svaka kolona ima minimalnu širinu */
+    min-width: 150px; 
 }
 
 #modelsTable tr {
-    border: 1px solid #000; /* Horizontalne crte između redova */
+    border: 1px solid #000; 
 }
 
 
@@ -382,7 +382,7 @@ select, input[type="text"] {
     gap: 20px;
 }
 
-/* Slika s lijeve strane */
+
 .company img {
     max-width: 40%;
     height: 540px;
@@ -391,7 +391,7 @@ select, input[type="text"] {
     margin-top: 20px;
 }
 
-/* Tekst s desne strane slike */
+
 .company .company-text {
     flex: 1;
     text-align: justify;
@@ -412,3 +412,25 @@ select, input[type="text"] {
     background: #ddd;
     margin: 20px 0;
 }
+
+
+.map-container {
+    width: 60%;
+    margin: 20px auto;
+    padding: 10px;
+    border: 2px solid #d34545;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.map-container iframe {
+    width: 100%;
+    height: 400px;
+    border: none;
+    border-radius: 8px;
+}
+
